--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential autoconf automake libtool pkg-config
 
-      - name: Configure & Build
+      - name: Generate configure & Build
         run: |
+          chmod +x ./autogen.sh ./configure
+          ./autogen.sh
           ./configure
           make -j$(nproc)
 
@@ -50,14 +52,15 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - name: Install MinGW-w64 (64-bit)
+      - name: Install MinGW-w64 and autotools
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 make binutils-mingw-w64
+          sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 make binutils-mingw-w64 automake autoconf libtool pkg-config
 
-      - name: Configure & Build
+      - name: Generate configure & Build
         run: |
-          chmod +x ./configure
+          chmod +x ./autogen.sh ./configure
+          ./autogen.sh
           ./configure CC=x86_64-w64-mingw32-gcc CXX=x86_64-w64-mingw32-g++
           make -j$(nproc)
 
@@ -77,14 +80,15 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - name: Install MinGW-w64 (32-bit)
+      - name: Install MinGW-w64 and autotools
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-mingw-w64-i686 g++-mingw-w64-i686 make binutils-mingw-w64
+          sudo apt-get install -y gcc-mingw-w64-i686 g++-mingw-w64-i686 make binutils-mingw-w64 automake autoconf libtool pkg-config
 
-      - name: Configure & Build
+      - name: Generate configure & Build
         run: |
-          chmod +x ./configure
+          chmod +x ./autogen.sh ./configure
+          ./autogen.sh
           ./configure CC=i686-w64-mingw32-gcc CXX=i686-w64-mingw32-g++
           make -j$(nproc)
 
@@ -105,10 +109,12 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool
+        run: brew install pkg-config automake libtool autoconf
 
-      - name: Configure & Build
+      - name: Generate configure & Build
         run: |
+          chmod +x ./autogen.sh ./configure
+          ./autogen.sh
           ./configure
           make -j$(sysctl -n hw.ncpu)
 
