Ensure the chmods are properly structured

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Generate configure & Build
         run: |
-          chmod +x ./autogen.sh ./configure
+          chmod +x ./autogen.sh && chmod +x ./configure
           ./autogen.sh
           ./configure
           make -j$(nproc)
@@ -59,7 +59,7 @@ jobs:
 
       - name: Generate configure & Build
         run: |
-          chmod +x ./autogen.sh ./configure
+          chmod +x ./autogen.sh && chmod +x ./configure
           ./autogen.sh
           ./configure CC=x86_64-w64-mingw32-gcc CXX=x86_64-w64-mingw32-g++
           make -j$(nproc)
@@ -87,7 +87,7 @@ jobs:
 
       - name: Generate configure & Build
         run: |
-          chmod +x ./autogen.sh ./configure
+          chmod +x ./autogen.sh && chmod +x ./configure
           ./autogen.sh
           ./configure CC=i686-w64-mingw32-gcc CXX=i686-w64-mingw32-g++
           make -j$(nproc)
@@ -113,7 +113,7 @@ jobs:
 
       - name: Generate configure & Build
         run: |
-          chmod +x ./autogen.sh ./configure
+          chmod +x ./autogen.sh && chmod +x ./configure
           ./autogen.sh
           ./configure
           make -j$(sysctl -n hw.ncpu)
