--- a/configure.ac
+++ b/configure.ac
@@ -9,19 +9,28 @@ AUDIOFILE_VERSION=$PACKAGE_VERSION
 AC_SUBST(AUDIOFILE_VERSION)
 AC_SUBST(AUDIOFILE_VERSION_INFO)
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIRS([m4])
 
 dnl Checks for programs.
-AC_PROG_CC
-AC_LANG([C99])
+AC_PROG_CC           dnl use modern macro instead of AC_PROG_CC_C99
 AC_PROG_CXX
 AC_PROG_INSTALL
-LT_INIT
+LT_INIT               dnl replaces AM_PROG_LIBTOOL
+
+dnl Ensure C99 support
+AC_COMPILE_IFELSE(
+  [AC_LANG_PROGRAM([[
+    #if !defined(__STDC_VERSION__) || __STDC_VERSION__ < 199901L
+    #error "C99 support required"
+    #endif
+  ]], [[return 0;]])],
+  [AC_MSG_RESULT([C99 support detected])],
+  [AC_MSG_ERROR([C99 support is required])])
 
 dnl Checks for header files.
-AC_CHECK_HEADERS(fcntl.h unistd.h)
+AC_CHECK_HEADERS([fcntl.h unistd.h])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -54,65 +63,55 @@ esac
 AC_MSG_RESULT($platform)
 AC_SUBST(TEST_BIN)
 
+dnl Compiler flags and options
 AC_ARG_ENABLE(werror,
   AS_HELP_STRING([--enable-werror], [treat compiler warnings as errors]),
   [enable_werror=$enableval],
   [enable_werror=no])
 AM_CONDITIONAL(ENABLE_WERROR, [test "$enable_werror" = "yes"])
-
 AS_IF([test "$enable_werror" = "yes"],
   [WERROR_CFLAGS="-Werror"
-  AC_SUBST(WERROR_CFLAGS)])
+   AC_SUBST(WERROR_CFLAGS)])
 
 AC_ARG_ENABLE(coverage,
   AS_HELP_STRING([--enable-coverage], [enable code coverage]),
   [enable_coverage=$enableval],
   [enable_coverage=no])
 AM_CONDITIONAL(ENABLE_COVERAGE, [test "$enable_coverage" = "yes"])
-
 AS_IF([test "$enable_coverage" = "yes"],
   [COVERAGE_CFLAGS="-fprofile-arcs -ftest-coverage"
-  COVERAGE_LIBS="-lgcov"
-  AC_SUBST(COVERAGE_CFLAGS)
-  AC_SUBST(COVERAGE_LIBS)
+   COVERAGE_LIBS="-lgcov"
+   AC_SUBST(COVERAGE_CFLAGS)
+   AC_SUBST(COVERAGE_LIBS)
 
-  AC_PATH_PROG(LCOV, lcov, :)
-  AC_PATH_PROG(GENHTML, genhtml, :)
-  AC_SUBST(LCOV)
-  AC_SUBST(GENHTML)
-  AS_IF([test "$LCOV" = :],
-    [AC_MSG_ERROR([lcov must be installed for code coverage: http://ltp.sourceforge.net/coverage/lcov.php])]
-  )
-])
+   AC_PATH_PROG(LCOV, lcov, :)
+   AC_PATH_PROG(GENHTML, genhtml, :)
+   AC_SUBST(LCOV)
+   AC_SUBST(GENHTML)
+   AS_IF([test "$LCOV" = :],
+     [AC_MSG_ERROR([lcov must be installed for code coverage: http://ltp.sourceforge.net/coverage/lcov.php])])])
 
 AC_ARG_ENABLE(valgrind,
   AS_HELP_STRING([--enable-valgrind], [enable testing with Valgrind]),
   [enable_valgrind=$enableval],
   [enable_valgrind=no])
 AM_CONDITIONAL(ENABLE_VALGRIND, [test "$enable_valgrind" = "yes"])
-
 AS_IF([test "$enable_valgrind" = "yes"],
   [AC_PATH_PROG(VALGRIND, valgrind, :)
-  AC_SUBST(VALGRIND)
-  AS_IF([test "$VALGRIND" = :],
-    [AC_MSG_ERROR([Could not find Valgrind.])]
-  )
-])
+   AC_SUBST(VALGRIND)
+   AS_IF([test "$VALGRIND" = :],
+     [AC_MSG_ERROR([Could not find Valgrind.])])])
 
 AC_ARG_ENABLE(docs,
   AS_HELP_STRING([--disable-docs], [disable documentation]),
   [enable_documentation=$enableval],
   [enable_documentation=yes])
 AM_CONDITIONAL(ENABLE_DOCUMENTATION, [test "$enable_documentation" = "yes"])
-
 AS_IF([test "$enable_documentation" = "yes"],
   [AC_PATH_PROG(A2X, a2x, :)
-  AC_PATH_PROG(ASCIIDOC, asciidoc, :)
-  AS_IF([test "$A2X" = :],
-    [AC_MSG_WARN([Could not find a2x.])])
-  AS_IF([test "$ASCIIDOC" = :],
-    [AC_MSG_WARN([Could not find asciidoc.])])
-])
+   AC_PATH_PROG(ASCIIDOC, asciidoc, :)
+   AS_IF([test "$A2X" = :], [AC_MSG_WARN([Could not find a2x.])])
+   AS_IF([test "$ASCIIDOC" = :], [AC_MSG_WARN([Could not find asciidoc.])])])
 
 AC_ARG_ENABLE(examples,
   AS_HELP_STRING([--disable-examples], [disable examples]),
@@ -131,11 +130,11 @@ PKG_INSTALLDIR
 FLAC_CFLAGS=""
 FLAC_LIBS=""
 
-if test -n "$PKG_CONFIG" ; then
-  if test "$enable_flac" = "yes" ; then
+if test -n "$PKG_CONFIG"; then
+  if test "$enable_flac" = "yes"; then
     PKG_CHECK_MODULES([FLAC], [flac >= 1.2.1], [ac_cv_flac=yes], [ac_cv_flac=no])
     FLAC_CFLAGS=`echo $FLAC_CFLAGS | $SED "s:include/FLAC:include:"`
-    if test "$ac_cv_flac" = "no" ; then
+    if test "$ac_cv_flac" = "no"; then
       enable_flac=no
     fi
   fi
@@ -145,9 +144,8 @@ fi
 
 AC_SUBST(FLAC_CFLAGS)
 AC_SUBST(FLAC_LIBS)
-
 AM_CONDITIONAL(ENABLE_FLAC, [test "$enable_flac" = "yes"])
-if test "$enable_flac" = "yes" ; then
+if test "$enable_flac" = "yes"; then
   AC_DEFINE_UNQUOTED([ENABLE_FLAC], [1], [Whether FLAC is enabled.])
 else
   AC_DEFINE_UNQUOTED([ENABLE_FLAC], [0], [Whether FLAC is enabled.])
@@ -165,5 +163,6 @@ AC_CONFIG_FILES([
   libaudiofile/alac/Makefile
   libaudiofile/modules/Makefile
   docs/Makefile
-  Makefile])
+  Makefile
+])
 AC_OUTPUT
