--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential autoconf automake libtool pkg-config \
-            libasound2-dev
+            libasound2-dev intltool gtk-doc-tools
 
       - name: Generate configure & Build
         run: |
@@ -60,7 +60,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
-            make binutils-mingw-w64 automake autoconf libtool pkg-config
+            make binutils-mingw-w64 automake autoconf libtool pkg-config \
+            intltool gtk-doc-tools
 
       - name: Generate configure & Build
         run: |
@@ -91,7 +92,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             gcc-mingw-w64-i686 g++-mingw-w64-i686 \
-            make binutils-mingw-w64 automake autoconf libtool pkg-config
+            make binutils-mingw-w64 automake autoconf libtool pkg-config \
+            intltool gtk-doc-tools
 
       - name: Generate configure & Build
         run: |
@@ -118,7 +120,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf
+        run: brew install pkg-config automake libtool autoconf intltool gtk-doc
 
       - name: Generate configure & Build
         run: |
