--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential autoconf automake libtool pkg-config \
-            libasound2-dev intltool gtk-doc-tools
+            libasound2-dev intltool gtk-doc-tools gettext
 
       - name: Generate configure & Build
         run: |
@@ -39,14 +39,21 @@ jobs:
           ./configure
           make -j$(nproc)
 
+      - name: Build documentation
+        run: |
+          make -C docs man html || true
+
       - name: Strip binaries
         run: find . -type f -executable -exec strip {} \; || true
 
-      - name: Upload Linux artifact
+      - name: Upload Linux artifacts
         uses: actions/upload-artifact@v4
         with:
           name: audiofile-linux
-          path: ./audiofile
+          path: |
+            ./audiofile
+            ./docs/html
+            ./docs/man
 
   build-windows-x64:
     name: Cross-build Windows x64
@@ -61,7 +68,7 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
             make binutils-mingw-w64 automake autoconf libtool pkg-config \
-            intltool gtk-doc-tools
+            intltool gtk-doc-tools gettext
 
       - name: Generate configure & Build
         run: |
@@ -93,7 +100,7 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-i686 g++-mingw-w64-i686 \
             make binutils-mingw-w64 automake autoconf libtool pkg-config \
-            intltool gtk-doc-tools
+            intltool gtk-doc-tools gettext
 
       - name: Generate configure & Build
         run: |
@@ -120,7 +127,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf intltool gtk-doc
+        run: brew install pkg-config automake libtool autoconf intltool gtk-doc gettext
 
       - name: Generate configure & Build
         run: |
@@ -130,6 +137,10 @@ jobs:
           ./configure
           make -j$(sysctl -n hw.ncpu)
 
+      - name: Build documentation
+        run: |
+          make -C docs man html || true
+
       - name: Strip binaries
         run: find . -type f -perm +111 -exec strip {} \; || true
 
@@ -137,7 +148,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: audiofile-macos
-          path: ./audiofile
+          path: |
+            ./audiofile
+            ./docs/html
+            ./docs/man
 
   release:
     name: Create GitHub Release
@@ -181,8 +195,12 @@ jobs:
           prerelease: ${{ github.event.inputs.release_type != 'main' }}
           files: |
             release/linux/audiofile
+            release/linux/docs/html
+            release/linux/docs/man
             release/windows-x64/audiofile.exe
             release/windows-x86/audiofile.exe
             release/macos/audiofile
+            release/macos/docs/html
+            release/macos/docs/man
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
