--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,22 +29,24 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential autoconf automake libtool pkg-config \
-            libasound2-dev intltool gtk-doc-tools gettext
+            libasound2-dev intltool gtk-doc-tools gettext asciidoc a2x
 
       - name: Generate configure & Build
         run: |
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure
+          ./configure --enable-docs
           make -j$(nproc)
-
-      - name: Build documentation
-        run: |
-          make -C docs man html || true
 
       - name: Strip binaries
         run: find . -type f -executable -exec strip {} \; || true
+
+      - name: Build docs
+        run: |
+          if [ -d docs ]; then
+            $(MAKE) -C docs
+          fi
 
       - name: Upload Linux artifacts
         uses: actions/upload-artifact@v4
@@ -53,7 +55,6 @@ jobs:
           path: |
             ./audiofile
             ./docs/html
-            ./docs/man
 
   build-windows-x64:
     name: Cross-build Windows x64
@@ -68,7 +69,7 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
             make binutils-mingw-w64 automake autoconf libtool pkg-config \
-            intltool gtk-doc-tools gettext
+            intltool gtk-doc-tools gettext asciidoc a2x
 
       - name: Generate configure & Build
         run: |
@@ -100,7 +101,7 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-i686 g++-mingw-w64-i686 \
             make binutils-mingw-w64 automake autoconf libtool pkg-config \
-            intltool gtk-doc-tools gettext
+            intltool gtk-doc-tools gettext asciidoc a2x
 
       - name: Generate configure & Build
         run: |
@@ -127,22 +128,24 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf intltool gtk-doc gettext
+        run: brew install pkg-config automake libtool autoconf \
+          intltool gtk-doc gettext asciidoc
 
       - name: Generate configure & Build
         run: |
           chmod +x ./autogen.sh
           ./autogen.sh
-          chmod +x ./configure
-          ./configure
+          chmod +x ./configure --enable-docs
           make -j$(sysctl -n hw.ncpu)
-
-      - name: Build documentation
-        run: |
-          make -C docs man html || true
 
       - name: Strip binaries
         run: find . -type f -perm +111 -exec strip {} \; || true
+
+      - name: Build docs
+        run: |
+          if [ -d docs ]; then
+            $(MAKE) -C docs
+          fi
 
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
@@ -151,7 +154,6 @@ jobs:
           path: |
             ./audiofile
             ./docs/html
-            ./docs/man
 
   release:
     name: Create GitHub Release
@@ -196,11 +198,9 @@ jobs:
           files: |
             release/linux/audiofile
             release/linux/docs/html
-            release/linux/docs/man
             release/windows-x64/audiofile.exe
             release/windows-x86/audiofile.exe
             release/macos/audiofile
             release/macos/docs/html
-            release/macos/docs/man
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
