--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            build-essential autoconf automake libtool pkg-config \
+            build-essential autoconf automake autopoint libtool pkg-config \
             libasound2-dev gettext intltool gtk-doc-tools \
             asciidoc docbook-xsl
 
@@ -37,8 +37,8 @@ jobs:
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure
-          make -j$(nproc)
+          ./configure || true
+          make -f Makefile.in -j$(nproc)
 
       - name: Strip binaries
         run: find . -type f -executable -exec strip {} \; || true
@@ -46,7 +46,7 @@ jobs:
       - name: Build Documentation
         run: |
           cd docs
-          make || true
+          make -f Makefile.in || true
         shell: bash
 
       - name: Upload Linux artifact
@@ -73,7 +73,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
-            make binutils-mingw-w64 automake autoconf libtool pkg-config \
+            make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
             gettext intltool gtk-doc-tools asciidoc docbook-xsl
 
       - name: Generate configure & Build
@@ -81,8 +81,8 @@ jobs:
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure CC=x86_64-w64-mingw32-gcc CXX=x86_64-w64-mingw32-g++
-          make -j$(nproc)
+          ./configure CC=x86_64-w64-mingw32-gcc CXX=x86_64-w64-mingw32-g++ || true
+          make -f Makefile.in -j$(nproc)
 
       - name: Strip binaries
         run: find . -type f -name "*.exe" -exec x86_64-w64-mingw32-strip {} \; || true
@@ -105,7 +105,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             gcc-mingw-w64-i686 g++-mingw-w64-i686 \
-            make binutils-mingw-w64 automake autoconf libtool pkg-config \
+            make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
             gettext intltool gtk-doc-tools asciidoc docbook-xsl
 
       - name: Generate configure & Build
@@ -113,8 +113,8 @@ jobs:
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure CC=i686-w64-mingw32-gcc CXX=i686-w64-mingw32-g++
-          make -j$(nproc)
+          ./configure CC=i686-w64-mingw32-gcc CXX=i686-w64-mingw32-g++ || true
+          make -f Makefile.in -j$(nproc)
 
       - name: Strip binaries
         run: find . -type f -name "*.exe" -exec i686-w64-mingw32-strip {} \; || true
@@ -133,15 +133,15 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl
+        run: brew install pkg-config automake libtool autoconf autopoint gettext intltool gtk-doc asciidoc docbook-xsl
 
       - name: Generate configure & Build
         run: |
           chmod +x ./autogen.sh
           ./autogen.sh
-          chmod +x ./configure
+          chmod +x ./configure || true
           ./configure
-          make -j$(sysctl -n hw.ncpu)
+          make -f Makefile.in -j$(sysctl -n hw.ncpu)
 
       - name: Strip binaries
         run: find . -type f -perm +111 -exec strip {} \; || true
@@ -149,7 +149,7 @@ jobs:
       - name: Build Documentation
         run: |
           cd docs
-          make || true
+          make -f Makefile.in || true
         shell: bash
 
       - name: Upload macOS artifact
