--- a/configure.ac
+++ b/configure.ac
@@ -9,23 +9,20 @@ AC_SUBST(AUDIOFILE_VERSION)
 AC_SUBST(AUDIOFILE_VERSION_INFO)
 
 AM_INIT_AUTOMAKE([foreign])
-AC_CONFIG_MACRO_DIRS([m4])
+AC_CONFIG_MACRO_DIRS([m4])        dnl Only include local m4 folder
 AC_CONFIG_HEADERS([config.h])
 
-dnl --- Ensure directories for docs and po exist ---
-AS_IF([! test -d "po"], [AC_MSG_NOTICE([Creating po/ directory]) ; mkdir -p po])
-AS_IF([! test -d "docs"], [AC_MSG_NOTICE([Creating docs/ directory]) ; mkdir -p docs])
-
 dnl --- Documentation / Internationalization support ---
-AM_GNU_GETTEXT([external])        dnl Gettext support
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_REQUIRE_VERSION([0.20])
 IT_PROG_INTLTOOL                  dnl Intltool support
-GTK_DOC_INIT                       dnl GtkDoc support
+GTK_DOC_INIT
 
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_INSTALL
-LT_INIT                           dnl replaces AM_PROG_LIBTOOL
+LT_INIT
 
 dnl Ensure C99 support
 AC_COMPILE_IFELSE(
@@ -49,71 +46,51 @@ AC_SYS_LARGEFILE
 AC_TYPE_OFF_T
 AC_TYPE_SIZE_T
 
-dnl Set up platform specific stuff
+dnl Platform specific setup
 platform=none
 AC_MSG_CHECKING([for platform specific tests to compile])
 case "$host_os" in
-  linux*)
-    TEST_BIN="linuxtest alsaplay"
-    platform=linux
-    ;;
-  irix5* | irix6*)
-    TEST_BIN="irixread irixtestloop"
-    platform=irix
-    ;;
+  linux*) TEST_BIN="linuxtest alsaplay"; platform=linux ;;
+  irix5*|irix6*) TEST_BIN="irixread irixtestloop"; platform=irix ;;
   darwin*)
     if test -e /System/Library/Frameworks/CoreAudio.framework; then
       TEST_BIN="osxplay"
       platform="Mac OS X"
-    fi
-    ;;
+    fi ;;
 esac
 AC_MSG_RESULT($platform)
 AC_SUBST(TEST_BIN)
 
 dnl Compiler flags and options
-AC_ARG_ENABLE(werror,
-  AS_HELP_STRING([--enable-werror], [treat compiler warnings as errors]),
-  [enable_werror=$enableval],
-  [enable_werror=no])
+AC_ARG_ENABLE(werror, AS_HELP_STRING([--enable-werror], [treat compiler warnings as errors]),
+  [enable_werror=$enableval], [enable_werror=no])
 AM_CONDITIONAL(ENABLE_WERROR, [test "$enable_werror" = "yes"])
-AS_IF([test "$enable_werror" = "yes"],
-  [WERROR_CFLAGS="-Werror"
-   AC_SUBST(WERROR_CFLAGS)])
+AS_IF([test "$enable_werror" = "yes"], [WERROR_CFLAGS="-Werror"; AC_SUBST(WERROR_CFLAGS)])
 
-AC_ARG_ENABLE(coverage,
-  AS_HELP_STRING([--enable-coverage], [enable code coverage]),
-  [enable_coverage=$enableval],
-  [enable_coverage=no])
+AC_ARG_ENABLE(coverage, AS_HELP_STRING([--enable-coverage], [enable code coverage]),
+  [enable_coverage=$enableval], [enable_coverage=no])
 AM_CONDITIONAL(ENABLE_COVERAGE, [test "$enable_coverage" = "yes"])
 AS_IF([test "$enable_coverage" = "yes"],
   [COVERAGE_CFLAGS="-fprofile-arcs -ftest-coverage"
    COVERAGE_LIBS="-lgcov"
    AC_SUBST(COVERAGE_CFLAGS)
    AC_SUBST(COVERAGE_LIBS)
-
    AC_PATH_PROG(LCOV, lcov, :)
    AC_PATH_PROG(GENHTML, genhtml, :)
    AC_SUBST(LCOV)
    AC_SUBST(GENHTML)
-   AS_IF([test "$LCOV" = :],
-     [AC_MSG_ERROR([lcov must be installed for code coverage])])])
+   AS_IF([test "$LCOV" = :], [AC_MSG_ERROR([lcov must be installed for code coverage])])])
 
-AC_ARG_ENABLE(valgrind,
-  AS_HELP_STRING([--enable-valgrind], [enable testing with Valgrind]),
-  [enable_valgrind=$enableval],
-  [enable_valgrind=no])
+AC_ARG_ENABLE(valgrind, AS_HELP_STRING([--enable-valgrind], [enable testing with Valgrind]),
+  [enable_valgrind=$enableval], [enable_valgrind=no])
 AM_CONDITIONAL(ENABLE_VALGRIND, [test "$enable_valgrind" = "yes"])
 AS_IF([test "$enable_valgrind" = "yes"],
   [AC_PATH_PROG(VALGRIND, valgrind, :)
    AC_SUBST(VALGRIND)
-   AS_IF([test "$VALGRIND" = :],
-     [AC_MSG_ERROR([Could not find Valgrind.])])])
+   AS_IF([test "$VALGRIND" = :], [AC_MSG_ERROR([Could not find Valgrind.])])])
 
-AC_ARG_ENABLE(docs,
-  AS_HELP_STRING([--disable-docs], [disable documentation]),
-  [enable_documentation=$enableval],
-  [enable_documentation=yes])
+AC_ARG_ENABLE(docs, AS_HELP_STRING([--disable-docs], [disable documentation]),
+  [enable_documentation=$enableval], [enable_documentation=yes])
 AM_CONDITIONAL(ENABLE_DOCUMENTATION, [test "$enable_documentation" = "yes"])
 AS_IF([test "$enable_documentation" = "yes"],
   [AC_PATH_PROG(A2X, a2x, :)
@@ -121,16 +98,12 @@ AS_IF([test "$enable_documentation" = "yes"],
    AS_IF([test "$A2X" = :], [AC_MSG_WARN([Could not find a2x.])])
    AS_IF([test "$ASCIIDOC" = :], [AC_MSG_WARN([Could not find asciidoc.])])])
 
-AC_ARG_ENABLE(examples,
-  AS_HELP_STRING([--disable-examples], [disable examples]),
-  [enable_examples=$enableval],
-  [enable_examples=yes])
+AC_ARG_ENABLE(examples, AS_HELP_STRING([--disable-examples], [disable examples]),
+  [enable_examples=$enableval], [enable_examples=yes])
 AS_IF([test "$enable_examples" != "yes"], [TEST_BIN=""])
 
-AC_ARG_ENABLE(flac,
-  AS_HELP_STRING([--disable-flac], [disable FLAC]),
-  [enable_flac=$enableval],
-  [enable_flac=yes])
+AC_ARG_ENABLE(flac, AS_HELP_STRING([--disable-flac], [disable FLAC]),
+  [enable_flac=$enableval], [enable_flac=yes])
 
 PKG_PROG_PKG_CONFIG
 PKG_INSTALLDIR
@@ -142,9 +115,7 @@ if test -n "$PKG_CONFIG"; then
   if test "$enable_flac" = "yes"; then
     PKG_CHECK_MODULES([FLAC], [flac >= 1.2.1], [ac_cv_flac=yes], [ac_cv_flac=no])
     FLAC_CFLAGS=`echo $FLAC_CFLAGS | $SED "s:include/FLAC:include:"`
-    if test "$ac_cv_flac" = "no"; then
-      enable_flac=no
-    fi
+    if test "$ac_cv_flac" = "no"; then enable_flac=no; fi
   fi
 else
   enable_flac=no
@@ -163,6 +134,7 @@ AC_CONFIG_FILES([
   audiofile.spec
   audiofile.pc
   audiofile-uninstalled.pc
+  po/Makefile.in
   sfcommands/Makefile
   test/Makefile
   gtest/Makefile
