can't do multiple target patterns there

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -60,7 +60,10 @@ A2XFLAGS = $(ASCIIDOCFLAGS) -d manpage -f manpage
 %.html: %.txt
 	$(ASCIIDOC) $(ASCIIDOCFLAGS) -b html4 -d manpage -f asciidoc.conf $<
 
-%.1: %.1.txt %.3: %.3.txt
+%.1: %.1.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+%.3: %.3.txt
 	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
 
 html: $(DOCS_HTML)
