a few compilation fixes

--- a/docs/asciidoc.conf
+++ b/docs/asciidoc.conf
@@ -7,7 +7,7 @@
 # defined, else just show the command.
 
 [macros]
-(?su)[\\]?(?P<name>linkaf):(?P<target>\\S*?)\[(?P<attrlist>.*?)\]=
+(?su)[\\]?(?P<name>linkaf):(?P<target>[^ \t\r\n]*?)\[(?P<attrlist>.*?)\]=
 
 ifdef::backend-docbook[]
 [linkaf-inlinemacro]
