--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,12 @@ jobs:
           sudo apt-get install -y \
             build-essential autoconf automake autopoint libtool pkg-config \
             libasound2-dev gettext intltool gtk-doc-tools \
-            asciidoc docbook-xsl
+            asciidoc docbook-xsl dos2unix
+
+      - name: Normalize line endings and tabs
+        run: |
+          find . -type f \( -name '*.am' -o -name '*.in' \) -exec dos2unix {} \;
+          find . -type f -name 'Makefile.am' -exec sed -i 's/^[ ]\+/\t/' {} \;
 
       - name: Generate configure & Build
         run: |
@@ -74,7 +79,12 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
             make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
-            gettext intltool gtk-doc-tools asciidoc docbook-xsl
+            gettext intltool gtk-doc-tools asciidoc docbook-xsl dos2unix
+
+      - name: Normalize line endings and tabs
+        run: |
+          find . -type f \( -name '*.am' -o -name '*.in' \) -exec dos2unix {} \;
+          find . -type f -name 'Makefile.am' -exec sed -i 's/^[ ]\+/\t/' {} \;
 
       - name: Generate configure & Build
         run: |
@@ -106,7 +116,12 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-i686 g++-mingw-w64-i686 \
             make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
-            gettext intltool gtk-doc-tools asciidoc docbook-xsl
+            gettext intltool gtk-doc-tools asciidoc docbook-xsl dos2unix
+
+      - name: Normalize line endings and tabs
+        run: |
+          find . -type f \( -name '*.am' -o -name '*.in' \) -exec dos2unix {} \;
+          find . -type f -name 'Makefile.am' -exec sed -i 's/^[ ]\+/\t/' {} \;
 
       - name: Generate configure & Build
         run: |
@@ -133,7 +148,12 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf autopoint gettext intltool gtk-doc asciidoc docbook-xsl
+        run: brew install pkg-config automake libtool autoconf autopoint gettext intltool gtk-doc asciidoc docbook-xsl dos2unix
+
+      - name: Normalize line endings and tabs
+        run: |
+          find . -type f \( -name '*.am' -o -name '*.in' \) -exec dos2unix {} \;
+          find . -type f -name 'Makefile.am' -exec sed -i '' 's/^[ ]\+/\t/' {} \;
 
       - name: Generate configure & Build
         run: |
