--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           sudo apt-get install -y \
             build-essential autoconf automake autopoint libtool pkg-config \
             libasound2-dev gettext intltool gtk-doc-tools \
-            asciidoc docbook-xsl dos2unix
+            asciidoc docbook-xsl
 
       - name: Generate configure & Build
         run: |
@@ -74,7 +74,7 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
             make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
-            gettext intltool gtk-doc-tools asciidoc docbook-xsl dos2unix
+            gettext intltool gtk-doc-tools asciidoc docbook-xsl
 
       - name: Generate configure & Build
         run: |
@@ -106,7 +106,7 @@ jobs:
           sudo apt-get install -y \
             gcc-mingw-w64-i686 g++-mingw-w64-i686 \
             make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
-            gettext intltool gtk-doc-tools asciidoc docbook-xsl dos2unix
+            gettext intltool gtk-doc-tools asciidoc docbook-xsl
 
       - name: Generate configure & Build
         run: |
@@ -133,7 +133,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf autopoint gettext intltool gtk-doc asciidoc docbook-xsl dos2unix
+        run: brew install pkg-config automake libtool autoconf autopoint gettext intltool gtk-doc asciidoc docbook-xsl
 
       - name: Generate configure & Build
         run: |
