--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -66,6 +66,30 @@ A2XFLAGS = $(ASCIIDOCFLAGS) -d manpage -f manpage
 %.3: %.3.txt
 	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
 
+afIdentifyNamedFD.3: afIdentifyFD.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+afInitAESChannelData.3: afInitAESChannelDataTo.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+afInitByteOrder.3 afInitChannels.3 afInitRate.3: afInitSampleFormat.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+afGetDataOffset.3 afGetTrackBytes.3: afGetFrameCount.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+afQueryLong.3 afQueryDouble.3 afQueryPointer.3: afQuery.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+afSeekMisc.3 afWriteMisc.3: afReadMisc.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+afSetVirtualByteOrder.3 afSetVirtualChannels.3 afSetVirtualPCMMapping.3: afSetVirtualSampleFormat.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
+afTellFrame.3: afSeekFrame.3.txt
+	$(A2X) $(A2XFLAGS) --asciidoc-opts="-f asciidoc.conf" $<
+
 html: $(DOCS_HTML)
 
 CLEANFILES = *.1 *.3 *.html
