--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential autoconf automake autopoint libtool pkg-config \
-            libasound2-dev gettext intltool gtk-doc-tools \
-            asciidoc docbook-xsl
+            gettext intltool gtk-doc-tools \
+            asciidoc docbook-xsl portaudio19-dev
 
       - name: Generate configure & Build
         run: |
@@ -40,8 +40,8 @@ jobs:
           ./configure || true
           make -j$(nproc)
 
-      - name: Strip binaries
-        run: find . -type f -executable -exec strip {} \; || true
+      - name: Strip audiofile binary only
+        run: strip ./audiofile || true
 
       - name: Build Documentation
         run: |
@@ -76,16 +76,25 @@ jobs:
             make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
             gettext intltool gtk-doc-tools asciidoc docbook-xsl
 
+      - name: Build PortAudio for Windows x64
+        run: |
+          git clone https://github.com/PortAudio/portaudio.git
+          cd portaudio
+          ./configure --host=x86_64-w64-mingw32 --disable-shared
+          make
+          cd ..
+
       - name: Generate configure & Build
         run: |
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure CC=x86_64-w64-mingw32-gcc CXX=x86_64-w64-mingw32-g++ || true
+          ./configure CC=x86_64-w64-mingw32-gcc CXX=x86_64-w64-mingw32-g++ \
+                      PKG_CONFIG_PATH=$(pwd)/portaudio || true
           make -j$(nproc)
 
-      - name: Strip binaries
-        run: find . -type f -name "*.exe" -exec x86_64-w64-mingw32-strip {} \; || true
+      - name: Strip audiofile.exe only
+        run: x86_64-w64-mingw32-strip ./audiofile.exe || true
 
       - name: Upload Windows x64 artifact
         uses: actions/upload-artifact@v4
@@ -108,16 +117,25 @@ jobs:
             make binutils-mingw-w64 automake autoconf autopoint libtool pkg-config \
             gettext intltool gtk-doc-tools asciidoc docbook-xsl
 
+      - name: Build PortAudio for Windows x86
+        run: |
+          git clone https://github.com/PortAudio/portaudio.git
+          cd portaudio
+          ./configure --host=i686-w64-mingw32 --disable-shared
+          make
+          cd ..
+
       - name: Generate configure & Build
         run: |
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure CC=i686-w64-mingw32-gcc CXX=i686-w64-mingw32-g++ || true
+          ./configure CC=i686-w64-mingw32-gcc CXX=i686-w64-mingw32-g++ \
+                      PKG_CONFIG_PATH=$(pwd)/portaudio || true
           make -j$(nproc)
 
-      - name: Strip binaries
-        run: find . -type f -name "*.exe" -exec i686-w64-mingw32-strip {} \; || true
+      - name: Strip audiofile.exe only
+        run: i686-w64-mingw32-strip ./audiofile.exe || true
 
       - name: Upload Windows x86 artifact
         uses: actions/upload-artifact@v4
@@ -133,7 +151,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf autopoint gettext intltool gtk-doc asciidoc docbook-xsl
+        run: brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl portaudio
 
       - name: Generate configure & Build
         run: |
@@ -143,8 +161,8 @@ jobs:
           ./configure
           make -j$(sysctl -n hw.ncpu)
 
-      - name: Strip binaries
-        run: find . -type f -perm +111 -exec strip {} \; || true
+      - name: Strip audiofile binary only
+        run: strip ./audiofile || true
 
       - name: Build Documentation
         run: |
