--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           sudo apt-get install -y \
             build-essential autoconf automake autopoint libtool pkg-config \
             gettext intltool gtk-doc-tools \
-            asciidoc docbook-xsl portaudio19-dev
+            asciidoc docbook-xsl portaudio19-dev libasound2-dev
 
       - name: Generate configure & Build
         run: |
