tweaks to cross-compiling and macos to ensure portaudio is triggered properly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,10 +151,12 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl portaudio
+        run: brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl portaudio && \
+             cpan XML::Parser
 
       - name: Generate configure & Build
         run: |
+          export PERL_BAD_REGEX=0
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure || true
